# console-presentation-starter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/console_presentation_starter/: CMakeLists.txt
src/console_presentation_starter/include/: params.hpp
src/console_presentation_starter/src/: console_presentation_starter.cpp
